feat: Add images in home testimonies

--- a/prime_home/templates/prime_home/index/testimonials_section.html
+++ b/prime_home/templates/prime_home/index/testimonials_section.html
@@ -1,13 +1,13 @@
 <section data-aos="zoom-in" class="bg-light pb-5 pt-5 text-secondary">
     <div class="container pb-3 pt-3">
         <h5 class="text-center text-danger">Testimonials</h5>
-        <h2 class="h1 mb-4 text-center text-dark">What our clients say</h2>
+        <h2 class="h1 mb-4 text-center text-dark">What our students say</h2>
         <div data-aos="fade-right" id="carousel7" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="https://images.unsplash.com/photo-1537151625747-768eb6cf92b2?ixid=MXwyMDkyMnwwfDF8c2VhcmNofDE5fHxkb2d8ZW58MHx8fA&ixlib=rb-1.2.1q=85&fm=jpg&crop=faces&cs=srgb&w=360&h=360&fit=crop"
+                            <img src="{{url_for('prime_home.static', filename='img/smiley.png')}}"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
@@ -16,19 +16,18 @@
                                 <path
                                     d="M23 1V5.06504C21.9136 5.67931 21.0807 6.43812 20.5012 7.34146C19.958 8.24481 19.5416 9.20235 19.2519 10.2141C18.9621 11.2258 18.8173 12.346 18.8173 13.5745H23V22.4634H14.0914V16.935C14.0914 13.6107 14.3992 11.0813 15.0148 9.34688C15.6667 7.61246 16.6444 6.02258 17.9481 4.57723C19.2519 3.09575 20.9358 1.90334 23 1ZM9.90864 1V5.06504C8.82222 5.67931 7.9893 6.43812 7.40988 7.34146C6.83045 8.24481 6.39588 9.20235 6.10617 10.2141C5.81646 11.2258 5.67161 12.346 5.67161 13.5745H9.90864V22.4634H1V16.935C1 13.6107 1.30782 11.0813 1.92346 9.34688C2.57531 7.61246 3.55309 6.02258 4.85679 4.57723C6.16049 3.09575 7.84444 1.90334 9.90864 1Z" />
                             </svg>
-                            <p class="font-weight-light h5 mb-4">Aliqua id fugiat nostrud irure ex duis ea quis id
-                                quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor
-                                enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id
-                                deserunt nisi.</p>
-                            <h4 class="font-weight-bold mb-1 text-danger">Kathryn Murphy</h4>
-                            <p class="font-weight-bold testimonial_pos">Chief Technology Officer</p>
+                            <p class="font-weight-light h5 mb-4">Thank you and i am proud to be PRIME KLC family, kayo ang naging tulay sa pagtupad ko sa aking mga pangarap sa buhay at salamat din sa walang sawang supporta hanggang ngayon. 2yrs and 1month na ako ngayong nagtatrabaho dito sa SOUTH KOREA and still fighting for the future goals. sa mga kababayan ko jan na nagbabalak o gustong pumunta dito ito lang ang masasabi ko ituloy at pagsikapan niyo po dahil malaki talaga ang mababago sa buhay niyo at ilagay niyo palagi sa isip niyo na "NAKAYA KO NGA KAYO PA" kaya laban lang tiwala sa sarili at dasal lang palagi sa taas
+                                #IamProudToBePrimeKLCFamily
+                                #감사함니다PrimeKLC</p>
+                            <h4 class="font-weight-bold mb-1 text-danger">DIONESIO NATINGGA</h4>
+                            <p class="font-weight-bold testimonial_pos">KLT15</p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="https://images.unsplash.com/photo-1574158622682-e40e69881006?ixid=MXwyMDkyMnwwfDF8c2VhcmNofDd8fGNhdHxlbnwwfHx8&ixlib=rb-1.2.1q=85&fm=jpg&crop=faces&cs=srgb&w=360&h=360&fit=crop"
+                            <img src="{{url_for('prime_home.static', filename='img/smiley.png')}}"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
@@ -37,18 +36,21 @@
                                 <path
                                     d="M23 1V5.06504C21.9136 5.67931 21.0807 6.43812 20.5012 7.34146C19.958 8.24481 19.5416 9.20235 19.2519 10.2141C18.9621 11.2258 18.8173 12.346 18.8173 13.5745H23V22.4634H14.0914V16.935C14.0914 13.6107 14.3992 11.0813 15.0148 9.34688C15.6667 7.61246 16.6444 6.02258 17.9481 4.57723C19.2519 3.09575 20.9358 1.90334 23 1ZM9.90864 1V5.06504C8.82222 5.67931 7.9893 6.43812 7.40988 7.34146C6.83045 8.24481 6.39588 9.20235 6.10617 10.2141C5.81646 11.2258 5.67161 12.346 5.67161 13.5745H9.90864V22.4634H1V16.935C1 13.6107 1.30782 11.0813 1.92346 9.34688C2.57531 7.61246 3.55309 6.02258 4.85679 4.57723C6.16049 3.09575 7.84444 1.90334 9.90864 1Z" />
                             </svg>
-                            <p class="font-weight-light h5 mb-4">Amet minim mollit non deserunt ullamco est sit
-                                aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
-                                Exercitation veniam consequat sunt nostrud amet.</p>
-                            <h4 class="font-weight-bold mb-1 text-danger">Dianne Russell</h4>
-                            <p class="font-weight-bold">Founder</p>
+                            <p class="font-weight-light h5 mb-4">Maraming salamat sa prime klc, Kayo ang naging tulay ko upang makapag work dito sa korea. Ngayon po ay 2 years and 6 months na po akong nag tatrabaho dito sa korea as factory worker and waiting po for extension this coming December if ever. na ma extend... Salamat po ulit kung di dahil sa inyo wala po ako dito sa korea salamt din sa mga teacher na nagtyatyagang magturo sa amin...at saka ang masasabi kolang sa mga klt aspirants or mga eps students na nag aaral or mag aaral or tapos ng mag aral ..is magsikap at magtyaga lang kayo..kasi..kung para talga yan sa iyo or inyo no matter what happen..kahit bumagsak kaman ng paulit2x....makakapasa karin nian sa huli..wag kang mawalan ng pag asa...kasi..may mga kakilala din ako ditong..bumagsak ng ilang beses..nag try parin cya at sa wakas..nakapasa..at ..natupad ung mga pangarap nia para sa family nia...at sa mga nakapasa na waiting..pa..mag antay2x lang muna kayo.dyan kasi..isa ang ating bansa na naka band pa sa korea gawa ng covid..so..while waiting mag aral parin kayo dyan para pagdating dito ay.bihasa na kayo sa kanilang language..so yan muna po😊😊
+                                #PrimeKLCYeoja
+                                #화이팅
+                                #감사합니다PrimeKLC
+                                #IamProudToBePrimeKLCFamily</p>
+                            <h4 class="font-weight-bold mb-1 text-danger">LESLIE GALENZOGA
+                            </h4>
+                            <p class="font-weight-bold">STUDENT</p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="https://images.unsplash.com/photo-1517101724602-c257fe568157?ixid=MXwyMDkyMnwwfDF8c2VhcmNofDZ8fHBhcnJvdHxlbnwwfHx8&ixlib=rb-1.2.1q=85&fm=jpg&crop=faces&cs=srgb&w=360&h=360&fit=crop"
+                            <img src="{{url_for('prime_home.static', filename='img/smiley.png')}}"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
@@ -57,12 +59,29 @@
                                 <path
                                     d="M23 1V5.06504C21.9136 5.67931 21.0807 6.43812 20.5012 7.34146C19.958 8.24481 19.5416 9.20235 19.2519 10.2141C18.9621 11.2258 18.8173 12.346 18.8173 13.5745H23V22.4634H14.0914V16.935C14.0914 13.6107 14.3992 11.0813 15.0148 9.34688C15.6667 7.61246 16.6444 6.02258 17.9481 4.57723C19.2519 3.09575 20.9358 1.90334 23 1ZM9.90864 1V5.06504C8.82222 5.67931 7.9893 6.43812 7.40988 7.34146C6.83045 8.24481 6.39588 9.20235 6.10617 10.2141C5.81646 11.2258 5.67161 12.346 5.67161 13.5745H9.90864V22.4634H1V16.935C1 13.6107 1.30782 11.0813 1.92346 9.34688C2.57531 7.61246 3.55309 6.02258 4.85679 4.57723C6.16049 3.09575 7.84444 1.90334 9.90864 1Z" />
                             </svg>
-                            <p class="font-weight-light h5 mb-4">Aliqua id fugiat nostrud irure ex duis ea quis id
-                                quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor
-                                enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id
-                                deserunt nisi.</p>
-                            <h4 class="font-weight-bold mb-1 text-danger">Darrell Steward</h4>
-                            <p class="font-weight-bold">Administrative Manager</p>
+                            <p class="font-weight-light h5 mb-4">Maraming salamat sa Prime klc sa tulong at suporta sa pagtupad ko NG PAngarap Kung makapag Korea..Malapit na rin akong mag 2 years dito sa Korea.. Ang Bilis lang Ng Panahon dati nangangarap lang din ako katulad NG iba at ngayon andito na ako... Kahit 2 days lang ako noon nag practice NG assembly sa skills test sa Prime ay Mas madali ko syang nagawa Doon sa actual na kasi maganda yong mga practice materials NG Prime.. Payo ko lang sa mga nagsisimula palang ay dapat e master niyo Muna mga Korean letters at Kung paano sila basahin tsaka pagkatapos memorize NG madaming vocabulary... Mas madali mong MA memorize ang mga vocabs Kung bihasa kanang magbasa.... Tapos basahin mo Yong Libro na ibibigay Nila at yong audio pabalik balik</p>
+                            <h4 class="font-weight-bold mb-1 text-danger">MAR JUN AMISTOSO
+                            </h4>
+                            <p class="font-weight-bold">STUDENT</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="align-items-center row">
+                        <div class="col-lg-4 pb-3 pt-3 text-center">
+                            <img src="{{url_for('prime_home.static', filename='img/smiley.png')}}"
+                                class="img-fluid rounded-circle">
+                        </div>
+                        <div class="col-lg-8 pb-3 pt-3">
+                            <svg viewBox="0 0 24 24" fill="currentColor" height="64" width="64"
+                                class="mb-3 text-danger">
+                                <path
+                                    d="M23 1V5.06504C21.9136 5.67931 21.0807 6.43812 20.5012 7.34146C19.958 8.24481 19.5416 9.20235 19.2519 10.2141C18.9621 11.2258 18.8173 12.346 18.8173 13.5745H23V22.4634H14.0914V16.935C14.0914 13.6107 14.3992 11.0813 15.0148 9.34688C15.6667 7.61246 16.6444 6.02258 17.9481 4.57723C19.2519 3.09575 20.9358 1.90334 23 1ZM9.90864 1V5.06504C8.82222 5.67931 7.9893 6.43812 7.40988 7.34146C6.83045 8.24481 6.39588 9.20235 6.10617 10.2141C5.81646 11.2258 5.67161 12.346 5.67161 13.5745H9.90864V22.4634H1V16.935C1 13.6107 1.30782 11.0813 1.92346 9.34688C2.57531 7.61246 3.55309 6.02258 4.85679 4.57723C6.16049 3.09575 7.84444 1.90334 9.90864 1Z" />
+                            </svg>
+                            <p class="font-weight-light h5 mb-4">Maraming salamat sa prime klc, Kayo ang naging tulay ko upang makapag work dito sa korea. Ngayon po ay 1 year and 6 months na po akong nag tatrabaho dito sa korea as factory worker. Kung di dahil sa inyo wala po ako dito sa korea, I am proud to be prime klc family. Kamsahamnida</p>
+                            <h4 class="font-weight-bold mb-1 text-danger">WALLY CATALAN
+                            </h4>
+                            <p class="font-weight-bold">STUDENT</p>
                         </div>
                     </div>
                 </div>
@@ -71,6 +90,7 @@
                 <li data-target="#carousel7" data-slide-to="0" class="active bg-danger"></li>
                 <li data-target="#carousel7" data-slide-to="1" class="bg-danger"></li>
                 <li data-target="#carousel7" data-slide-to="2" class="bg-danger"></li>
+                <li data-target="#carousel7" data-slide-to="3" class="bg-danger"></li>
             </ol>
         </div>
     </div>
