--- a/prime_home/templates/prime_home/navigation_header.html
+++ b/prime_home/templates/prime_home/navigation_header.html
@@ -19,19 +19,19 @@ class="nav-background border border-left-0 border-right-0 border-top-0 navbar na
                 <a class="nav-link px-lg-3 py-lg-4 dropdown-toggle" href="#" id="navbarDropdownMenuLink"
                     role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Learn Korean</a>
-                    <a class="dropdown-item" href="#">Work in South Korea</a>
+                    <a class="dropdown-item">Learn Korean</a>
+                    <a class="dropdown-item">Work in South Korea</a>
                 </div>
             </li>
             <li class="nav-item dropdown"> 
                 <a class="nav-link px-lg-3 py-lg-4 dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Testimonies</a> 
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
-                    <a class="dropdown-item" href="#">Our Proof of Gallery</a>
-                    <a class="dropdown-item" href="#">Orientation</a>
-                    <a class="dropdown-item" href="#">Actual Class</a>
-                    <a class="dropdown-item" href="#">Graduation</a>
-                    <a class="dropdown-item" href="#">Skill test</a>
-                    <a class="dropdown-item" href="#">Departure in Sout Korea</a>
+                    <a class="dropdown-item">Our Proof of Gallery</a>
+                    <a class="dropdown-item">Orientation</a>
+                    <a class="dropdown-item">Actual Class</a>
+                    <a class="dropdown-item">Graduation</a>
+                    <a class="dropdown-item">Skill test</a>
+                    <a class="dropdown-item">Departure in South Korea</a>
                 </div>                             
             </li>
             <li class="nav-item dropdown">
@@ -43,14 +43,13 @@ class="nav-background border border-left-0 border-right-0 border-top-0 navbar na
                 <a class="nav-link px-lg-3 py-lg-4 dropdown-toggle" href="#" id="navbarDropdownMenuLink"
                     role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Branches</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Cebu</a>
-                    <a class="dropdown-item" href="#">Tacloban</a>
-                    <a class="dropdown-item" href="#">Calbayog</a>
-                    <a class="dropdown-item" href="#">Bohol</a>
-                    <a class="dropdown-item" href="#">Palawan</a>
+                    <a class="dropdown-item">Cebu</a>
+                    <a class="dropdown-item">Tacloban</a>
+                    <a class="dropdown-item">Calbayog</a>
+                    <a class="dropdown-item">Bohol</a>
+                    <a class="dropdown-item">Palawan</a>
                 </div>
             </li>
-
         </ul>
         <!-- <a class="btn btn-light ml-lg-auto pl-4 pr-4 rounded-pill" href="#">Log In</a> -->
     </div>
