--- a/prime_home/templates/prime_home/index/testimonies_section.html
+++ b/prime_home/templates/prime_home/index/testimonies_section.html
@@ -4,85 +4,74 @@ id="testimonies">
     <h2 class="h1 mb-4 text-center">Our Testimonies</h2>
     <div class="align-items-center row">
         <div class="col-lg-4 pb-3 pt-3">
-            <img src="{{url_for('prime_home.static', filename='img/default-image.jpg')}}" width="1188.238" height="500.402"
+            <img src="{{url_for('prime_home.static', filename='img/proof_of_gallery.jpg')}}" width="1188.238" height="500.402"
                 viewBox="0 0 1188.238 884.402" class="col-8 col-lg-12 d-block img-fluid ml-auto mr-auto">
         </div>
         <div data-aos="fade-right" class="col-lg-6 pb-3 pt-3">
             <div class="pb-3 pt-3">
                 <h3 class="text-dark">Proof of Gallery</h3>
-                <p class="font-weight-light mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                    volutpat sem ac elit rutrum rhoncus. Donec a lacinia metus. Morbi volutpat interdum sem,
-                    vitae aliquam odio tempor blandit.Lorem ipsum dolor sit amet.</p>
+                <p class="font-weight-light mb-0">Prime KLC students who have gone KOREAN LANGUAGE TRAINING have passed the EPS-TOPIK exam and got hired by Korean employers. PRIME KLC is assisting Filipinos who are interested to work as factory workers in SOUTH KOREA.</p>
             </div>
         </div>
     </div>
     <div data-aos="fade-left" class="align-items-center row">
         <div class="col-lg-4 offset-lg-2 pb-3 pt-3">
-            <img src="{{url_for('prime_home.static', filename='img/class_1.jpg')}}" width="1154.563" height="500.865"
+            <img src="{{url_for('prime_home.static', filename='img/orientation_1.jpg')}}" width="1154.563" height="500.865"
                 viewBox="0 0 1154.563 886.865" class="col-8 col-lg-12 d-block img-fluid ml-auto mr-auto">
         </div>
         <div class="col-lg-6 pb-3 pt-3">
             <div class="pb-3 pt-3">
                 <h3 class="text-dark">Orientation</h3>
-                <p class="font-weight-light mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                    volutpat sem ac elit rutrum rhoncus. Donec a lacinia metus. Morbi volutpat interdum sem,
-                    vitae aliquam odio tempor blandit.Lorem ipsum dolor sit amet.</p>
+                <p class="font-weight-light mb-0">Orientation is conducted as the first step, for those interested applicants they must undergo an orientation to know the step by step process. Schedule of orientation is conducted regularly at least 2 times a week in different branches. Clients who are interested with this program must send the personal details Before attending the orientation to know the nearest branch where they can join the said</p>
             </div>
         </div>
     </div>
     <div class="align-items-center row">
         <div class="col-lg-4 pb-3 pt-3">
-            <img src="{{url_for('prime_home.static', filename='img/default-image.jpg')}}" width="1171.07" height="500.585"
+            <img src="{{url_for('prime_home.static', filename='img/actual_class_1.jpg')}}" width="1171.07" height="500.585"
                 viewBox="0 0 1171.07 884.585" class="col-8 col-lg-12 d-block img-fluid ml-auto mr-auto">
         </div>
         <div data-aos="fade-right" class="col-lg-6 pb-3 pt-3">
             <div class="pb-3 pt-3">
                 <h3 class="text-dark">Actual Class</h3>
-                <p class="font-weight-light mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                    volutpat sem ac elit rutrum rhoncus. Donec a lacinia metus. Morbi volutpat interdum sem,
-                    vitae aliquam odio tempor blandit.Lorem ipsum dolor sit amet.</p>
+                <p class="font-weight-light mb-0">We offer actual classes of KOREAN LANGUAGE Training Schedule of classes for weekdays 17 days Monday to Friday at least 3 hours a day with 3 sessions Morning (9:00am to 12:00nn) Afternoon class ( 1:00pm to 4:00pm) Night class ( 6:00pm to 9:00pm) Sunday class 10 consecutive Sundays ( 9:00am to 4:00pm)</p>
             </div>
         </div>
     </div>
     <div class="align-items-center row">
         <div class="col-lg-4 offset-lg-2 pb-3 pt-3">
-            <img src="{{url_for('prime_home.static', filename='img/default-image.jpg')}}" width="1255.003" height="500.707"
+            <img src="{{url_for('prime_home.static', filename='img/graduation_1.jpg')}}" width="1255.003" height="500.707"
                 viewBox="0 0 1255.003 870.707" class="col-8 col-lg-12 d-block img-fluid ml-auto mr-auto">
         </div>
         <div data-aos="fade-left" class="col-lg-6 pb-3 pt-3">
             <div class="pb-3 pt-3">
                 <h3 class="text-dark">Graduation</h3>
-                <p class="font-weight-light mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                    volutpat sem ac elit rutrum rhoncus. Donec a lacinia metus. Morbi volutpat interdum sem,
-                    vitae aliquam odio tempor blandit.Lorem ipsum dolor sit amet.</p>
+                <p class="font-weight-light mb-0">Giving of Certificates to all the students who have successfully completed the KOREAN LANGUAGE TRAINING/KOREAN CLASS. Acknowledging those students who are dedicated on their training, Giving of awards/recognition to those TOP SCORERS
+                </p>
             </div>
         </div>
     </div>
     <div class="align-items-center row">
         <div class="col-lg-4 pb-3 pt-3">
-            <img src="{{url_for('prime_home.static', filename='img/default-image.jpg')}}" width="1175.976" height="500.199"
+            <img src="{{url_for('prime_home.static', filename='img/skill_test_1.jpg')}}" width="1175.976" height="500.199"
                 viewBox="0 0 1175.976 864.199" class="col-8 col-lg-12 d-block img-fluid ml-auto mr-auto">
         </div>
         <div class="col-lg-6 pb-3 pt-3">
             <div data-aos="fade-right" class="pb-3 pt-3">
                 <h3 class="text-dark">Skill Test</h3>
-                <p class="font-weight-light mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                    volutpat sem ac elit rutrum rhoncus. Donec a lacinia metus. Morbi volutpat interdum sem,
-                    vitae aliquam odio tempor blandit.Lorem ipsum dolor sit amet.</p>
+                <p class="font-weight-light mb-0">PRIME KLC is conducted an actual skill test training before attending the SKILL TEST under HRD KOREA It is conducted after passing the EPS-TOPIK EXAM, In preparation of the SKILL TEST in Manila Students will undergo an actual training, There is an actual interview with the TEACHER/INSTRUCTOR and the STUDENT and practicing different task in just 1 second.</p>
             </div>
         </div>
     </div>
     <div class="align-items-center row">
         <div class="col-lg-4 offset-lg-2 pb-3 pt-3">
-            <img src="{{url_for('prime_home.static', filename='img/default-image.jpg')}}" width="1329.507" height="500.707"
+            <img src="{{url_for('prime_home.static', filename='img/departure_1.jpg')}}" width="1329.507" height="500.707"
                 viewBox="0 0 1329.507 825.707" class="col-8 col-lg-12 d-block img-fluid ml-auto mr-auto">
         </div>
         <div class="col-lg-6 pb-3 pt-3">
             <div data-aos="fade-left" class="pb-3 pt-3">
                 <h3 class="text-dark">Departure in South Korea</h3>
-                <p class="font-weight-light mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                    volutpat sem ac elit rutrum rhoncus. Donec a lacinia metus. Morbi volutpat interdum sem,
-                    vitae aliquam odio tempor blandit.Lorem ipsum dolor sit amet.</p>
+                <p class="font-weight-light mb-0">After Passing the step by step process, PRIME KLC assisted the students financially until they reach SOUTH KOREA, We provide a free MALITA with financial assistance up to 50,000.                </p>
             </div>
         </div>
     </div>
