fix: Redirection and icons

--- a/prime_admin/templates/lms/buy_items.html
+++ b/prime_admin/templates/lms/buy_items.html
@@ -6,7 +6,7 @@
         <div class="page-title-wrapper">
             <div class="page-title-heading">
                 <div class="page-title-icon">
-                    <i class="text-success pe-7s-tools">
+                    <i class="text-success pe-7s-calculator">
                     </i>
                 </div>
                 <div>Buy Items
