--- a/prime_admin/templates/lms/deposit_modal.html
+++ b/prime_admin/templates/lms/deposit_modal.html
@@ -140,10 +140,12 @@
 
                     <div style="display: none;" id="tbl_deposit" class="main-card mb-3 card">
                         <div class="card-body">
+                <div class="table-responsive">
                             <table id="tbl_mdl_deposit" style="width:100%; cursor:pointer;" class="mb-0 table">
                             <thead>
                                 <tr>
                                     <th>REGISTRATION NO.</th>
+                                    <th>SALES FROM</th>
                                     <th>LAST NAME</th>
                                     <th>FIRST NAME</th>
                                     <th>MIDDLE NAME</th>
@@ -158,6 +160,8 @@
                                      <!-- load with ajax -->
                                 </tbody>
                             </table>
+                        </div>
+
                         </div>
                     </div>
                     <script>
