feat: Add branches page

--- a/prime_home/static/css/style.css
+++ b/prime_home/static/css/style.css
@@ -54,3 +54,7 @@
 .primary-color {
     background-color: rgb(0, 97, 168) !important;
 }
+
+.text-favorite {
+    color: rgb(0, 97, 168) !important;
+}
