--- a/prime_home/templates/prime_home/index.html
+++ b/prime_home/templates/prime_home/index.html
@@ -26,6 +26,8 @@
     {% include "prime_home/index/branches_section.html" %}
     <!--End Of Branches Section-->
 
+    {% include "prime_home/index/contact_us_section.html"%}
+
     <!-- Talk Section -->
     {% include "prime_home/index/talk_section.html" %}
     <!--End Of Talk Section-->
