--- a/prime_home/templates/prime_home/index/branches_section.html
+++ b/prime_home/templates/prime_home/index/branches_section.html
@@ -1,49 +1,48 @@
-    
-    <section data-aos="zoom-in" class="bg-light border border-left-0 border-right-0 border-top-0 pb-5 pt-5">
-        <div class="container pb-5 pt-5">
-            <h5 class="text-center text-danger">Our Branches</h5>
-            <h2 class="h1 mb-4 text-center text-dark">Some of our offices</h2>
-            <div class="row">
-                <div data-aos="flip-left" data-aos-duration="3000" class="col-md-6 pb-3 pt-3">
-                    <a class="d-block pb-5 text-decoration-none text-white primary-color">
-                        <div class="p-5">
-                            <h4 class="mb-3">Cebu</h4>
-                            <p class="mb-0">Room 308, 3rd Floor, Doña Luisa Bldg. Fuente Osmena circle, Cebu City</p>
-                        </div>
-            <img width="100%" height="400px" src="{{url_for('prime_home.static', filename='img/cebu_1.jpg')}}"/>
-                    </a>
-                </div>
-                <div data-aos="flip-right" data-aos-duration="3000" class="col-md-6 pb-3 pt-3">
-                    <a class="d-block mb-md-n5 mt-md-5 pb-5 text-decoration-none text-white primary-color">
-                        <div class="p-5">
-                            <h4 class="mb-3">Bohol</h4>
-                            <p class="mb-0">Room 201 A. 2nd floor,. Saint Jude Building, Gallares St., corner H Grupo St., Tagbilaran City.</p>
-                        </div>
-                        <img width="100%" height="400px" src="{{url_for('prime_home.static', filename='img/bohol_1.jpg')}}"/>
-                    </a>
-                </div>
-                <div data-aos="flip-left" data-aos-duration="3000" class="col-md-6 pb-3 pt-3">
-                    <a class="d-block pb-5 text-decoration-none text-white primary-color">
-                        <div class="p-5">
-                            <h4 class="mb-3">Tacloban</h4>
-                            <p class="mb-0">Room 4B, 4th floor, CATJOY BUILDING, P.Burgos St. Tacloban City.</p>
-                        </div>
-            <img width="100%" height="400px" src="{{url_for('prime_home.static', filename='img/tacloban_1.jpg')}}"/>
-                     
-                    </a>
-                </div>
-                <div data-aos="flip-right" data-aos-duration="3000" class="col-md-6 pb-3 pt-3">
-                    <a class="d-block mt-md-5 pb-5 text-decoration-none text-white primary-color">
-                        <div class="p-5">
-                            <h4 class="mb-3">Palawan</h4>
-                            <p class="mb-0">3rd floor, Yusay incorporated building,Lacao st. puerto princesa city, palawan </p>
-                        </div>
-            <img width="100%" height="400px" src="{{url_for('prime_home.static', filename='img/palawan_1.jpg')}}"/>
-                    </a>
-                </div>
+<section data-aos="zoom-in" class="bg-light border border-left-0 border-right-0 border-top-0 pb-5 pt-5">
+    <div class="container pb-5 pt-5">
+        <h5 class="text-center text-favorite">Our Branches</h5>
+        <h2 class="h1 mb-4 text-center text-dark">Some of our offices</h2>
+        <div class="row">
+            <div data-aos="flip-left" data-aos-duration="3000" class="col-md-6 pb-3 pt-3">
+                <a class="d-block pb-5 text-decoration-none text-white primary-color">
+                    <div class="p-5">
+                        <h4 class="mb-3">Cebu</h4>
+                        <p class="mb-0">Room 308, 3rd Floor, Doña Luisa Bldg. Fuente Osmena circle, Cebu City</p>
+                    </div>
+        <img width="100%" height="400px" src="{{url_for('prime_home.static', filename='img/cebu_1.jpg')}}"/>
+                </a>
             </div>
-            <!-- <div class="pb-4 pt-4 text-center">
-                <a class="btn btn-danger primary-color pl-4 pr-4 rounded-pill" href="#">View More</a>
-            </div> -->
+            <div data-aos="flip-right" data-aos-duration="3000" class="col-md-6 pb-3 pt-3">
+                <a class="d-block mb-md-n5 mt-md-5 pb-5 text-decoration-none text-white primary-color">
+                    <div class="p-5">
+                        <h4 class="mb-3">Bohol</h4>
+                        <p class="mb-0">Room 201 A. 2nd floor,. Saint Jude Building, Gallares St., corner H Grupo St., Tagbilaran City.</p>
+                    </div>
+                    <img width="100%" height="400px" src="{{url_for('prime_home.static', filename='img/bohol_1.jpg')}}"/>
+                </a>
+            </div>
+            <div data-aos="flip-left" data-aos-duration="3000" class="col-md-6 pb-3 pt-3">
+                <a class="d-block pb-5 text-decoration-none text-white primary-color">
+                    <div class="p-5">
+                        <h4 class="mb-3">Tacloban</h4>
+                        <p class="mb-0">Room 4B, 4th floor, CATJOY BUILDING, P.Burgos St. Tacloban City.</p>
+                    </div>
+        <img width="100%" height="400px" src="{{url_for('prime_home.static', filename='img/tacloban_1.jpg')}}"/>
+                    
+                </a>
+            </div>
+            <div data-aos="flip-right" data-aos-duration="3000" class="col-md-6 pb-3 pt-3">
+                <a class="d-block mt-md-5 pb-5 text-decoration-none text-white primary-color">
+                    <div class="p-5">
+                        <h4 class="mb-3">Palawan</h4>
+                        <p class="mb-0">3rd floor, Yusay incorporated building,Lacao st. puerto princesa city, palawan </p>
+                    </div>
+        <img width="100%" height="400px" src="{{url_for('prime_home.static', filename='img/palawan_1.jpg')}}"/>
+                </a>
+            </div>
         </div>
-    </section>
+        <div class="pb-4 pt-4 text-center">
+            <a style="color: white;" class="btn primary-color pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.branches')}}">View More</a>
+        </div>
+    </div>
+</section>
