--- a/prime_home/templates/prime_home/navigation_header.html
+++ b/prime_home/templates/prime_home/navigation_header.html
@@ -26,16 +26,16 @@ class="nav-background border border-left-0 border-right-0 border-top-0 navbar na
             <li class="nav-item dropdown"> 
                 <a class="nav-link px-lg-3 py-lg-4 dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Testimonies</a> 
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
-                    <a class="dropdown-item">Our Proof of Gallery</a>
-                    <a class="dropdown-item">Orientation</a>
-                    <a class="dropdown-item">Actual Class</a>
-                    <a class="dropdown-item">Graduation</a>
-                    <a class="dropdown-item">Skill test</a>
-                    <a class="dropdown-item">Departure in South Korea</a>
+                    <a id="btn_proof_of_gallery" class="dropdown-item">Our Proof of Gallery</a>
+                    <a id="btn_orientation" class="dropdown-item">Orientation</a>
+                    <a id="btn_actual_class" class="dropdown-item">Actual Class</a>
+                    <a id="btn_graduation" class="dropdown-item">Graduation</a>
+                    <a id="btn_skill_test" class="dropdown-item">Skill test</a>
+                    <a id="btn_departure" class="dropdown-item">Departure in South Korea</a>
                 </div>                             
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link px-lg-3 py-lg-4" href="#" id="navbarDropdownMenuLink"
+                <a class="nav-link px-lg-3 py-lg-4" href="#" id="nav_contact_us"
                     role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact
                     Us</a>
             </li>
