--- a/prime_home/templates/prime_home/index/about_us_section.html
+++ b/prime_home/templates/prime_home/index/about_us_section.html
@@ -10,7 +10,7 @@ id="about">
                 Our company IS A LANGUAGE TRAINING CENTER THAT PROVIDES  KOREAN LANGUAGE TRAINING TO PASS THE KOREAN LANGUAGE TEST PRESCRIBED BY THE HRD KOREA( HUMAN RESOURCES DEVELOPMENT OF KOREA) IN COORDINATION WITH POEA( PHILIPPINE OVERSEAS EMPLOYMENT ADMINISTRATION),WITH REGISTRATION NO. CS201817522 under Security and exchange commision.The company is a corporation duly organized and existing by virtue of Philippine laws. It is one of the many Service Provider Language Companies operating in Luzon, Visayas, Mindanao and currently has 7 branches actively serving and continually giving assistance to Filipinos.
                 Again, we welcome you all, If you have questions prioINTENSIVEr to company's details, kindly send us an email 
                 </p>
-                <h5 data-aos="zoom-in" data-aos-duration="5000" class="h5 mb-4 text-dark">WELCOME to our TEAM
+                <h5 data-aos="zoom-in" data-aos-duration="5000" class="h5 mb-4 text-dark">Welcome to our team
                 </h5>
             <!-- <a data-aos="zoom-in" data-aos-duration="5000" class="btn btn-danger pl-4 pr-4 rounded-pill" href="#">Learn More</a> -->
         </div>
