--- a/prime_home/templates/prime_home/index/testimonials_section.html
+++ b/prime_home/templates/prime_home/index/testimonials_section.html
@@ -1,6 +1,6 @@
 <section data-aos="zoom-in" class="bg-light pb-5 pt-5 text-secondary">
     <div class="container pb-3 pt-3">
-        <h5 class="text-center text-danger">Testimonials</h5>
+        <h5 class="text-center text-favorite">Testimonials</h5>
         <h2 class="h1 mb-4 text-center text-dark">What our students say</h2>
         <div data-aos="fade-right" id="carousel7" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -12,14 +12,14 @@
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
                             <svg viewBox="0 0 24 24" fill="currentColor" height="64" width="64"
-                                class="mb-3 text-danger">
+                                class="mb-3 text-favorite">
                                 <path
                                     d="M23 1V5.06504C21.9136 5.67931 21.0807 6.43812 20.5012 7.34146C19.958 8.24481 19.5416 9.20235 19.2519 10.2141C18.9621 11.2258 18.8173 12.346 18.8173 13.5745H23V22.4634H14.0914V16.935C14.0914 13.6107 14.3992 11.0813 15.0148 9.34688C15.6667 7.61246 16.6444 6.02258 17.9481 4.57723C19.2519 3.09575 20.9358 1.90334 23 1ZM9.90864 1V5.06504C8.82222 5.67931 7.9893 6.43812 7.40988 7.34146C6.83045 8.24481 6.39588 9.20235 6.10617 10.2141C5.81646 11.2258 5.67161 12.346 5.67161 13.5745H9.90864V22.4634H1V16.935C1 13.6107 1.30782 11.0813 1.92346 9.34688C2.57531 7.61246 3.55309 6.02258 4.85679 4.57723C6.16049 3.09575 7.84444 1.90334 9.90864 1Z" />
                             </svg>
                             <p class="font-weight-light h5 mb-4">Thank you and i am proud to be PRIME KLC family, kayo ang naging tulay sa pagtupad ko sa aking mga pangarap sa buhay at salamat din sa walang sawang supporta hanggang ngayon. 2yrs and 1month na ako ngayong nagtatrabaho dito sa SOUTH KOREA and still fighting for the future goals. sa mga kababayan ko jan na nagbabalak o gustong pumunta dito ito lang ang masasabi ko ituloy at pagsikapan niyo po dahil malaki talaga ang mababago sa buhay niyo at ilagay niyo palagi sa isip niyo na "NAKAYA KO NGA KAYO PA" kaya laban lang tiwala sa sarili at dasal lang palagi sa taas
                                 #IamProudToBePrimeKLCFamily
                                 #감사함니다PrimeKLC</p>
-                            <h4 class="font-weight-bold mb-1 text-danger">DIONESIO NATINGGA</h4>
+                            <h4 class="font-weight-bold mb-1 text-favorite">DIONESIO NATINGGA</h4>
                             <p class="font-weight-bold testimonial_pos">KLT15</p>
                         </div>
                     </div>
@@ -32,7 +32,7 @@
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
                             <svg viewBox="0 0 24 24" fill="currentColor" height="64" width="64"
-                                class="mb-3 text-danger">
+                                class="mb-3 text-favorite">
                                 <path
                                     d="M23 1V5.06504C21.9136 5.67931 21.0807 6.43812 20.5012 7.34146C19.958 8.24481 19.5416 9.20235 19.2519 10.2141C18.9621 11.2258 18.8173 12.346 18.8173 13.5745H23V22.4634H14.0914V16.935C14.0914 13.6107 14.3992 11.0813 15.0148 9.34688C15.6667 7.61246 16.6444 6.02258 17.9481 4.57723C19.2519 3.09575 20.9358 1.90334 23 1ZM9.90864 1V5.06504C8.82222 5.67931 7.9893 6.43812 7.40988 7.34146C6.83045 8.24481 6.39588 9.20235 6.10617 10.2141C5.81646 11.2258 5.67161 12.346 5.67161 13.5745H9.90864V22.4634H1V16.935C1 13.6107 1.30782 11.0813 1.92346 9.34688C2.57531 7.61246 3.55309 6.02258 4.85679 4.57723C6.16049 3.09575 7.84444 1.90334 9.90864 1Z" />
                             </svg>
@@ -41,7 +41,7 @@
                                 #화이팅
                                 #감사합니다PrimeKLC
                                 #IamProudToBePrimeKLCFamily</p>
-                            <h4 class="font-weight-bold mb-1 text-danger">LESLIE GALENZOGA
+                            <h4 class="font-weight-bold mb-1 text-favorite">LESLIE GALENZOGA
                             </h4>
                             <p class="font-weight-bold">STUDENT</p>
                         </div>
@@ -55,12 +55,12 @@
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
                             <svg viewBox="0 0 24 24" fill="currentColor" height="64" width="64"
-                                class="mb-3 text-danger">
+                                class="mb-3 text-favorite">
                                 <path
                                     d="M23 1V5.06504C21.9136 5.67931 21.0807 6.43812 20.5012 7.34146C19.958 8.24481 19.5416 9.20235 19.2519 10.2141C18.9621 11.2258 18.8173 12.346 18.8173 13.5745H23V22.4634H14.0914V16.935C14.0914 13.6107 14.3992 11.0813 15.0148 9.34688C15.6667 7.61246 16.6444 6.02258 17.9481 4.57723C19.2519 3.09575 20.9358 1.90334 23 1ZM9.90864 1V5.06504C8.82222 5.67931 7.9893 6.43812 7.40988 7.34146C6.83045 8.24481 6.39588 9.20235 6.10617 10.2141C5.81646 11.2258 5.67161 12.346 5.67161 13.5745H9.90864V22.4634H1V16.935C1 13.6107 1.30782 11.0813 1.92346 9.34688C2.57531 7.61246 3.55309 6.02258 4.85679 4.57723C6.16049 3.09575 7.84444 1.90334 9.90864 1Z" />
                             </svg>
                             <p class="font-weight-light h5 mb-4">Maraming salamat sa Prime klc sa tulong at suporta sa pagtupad ko NG PAngarap Kung makapag Korea..Malapit na rin akong mag 2 years dito sa Korea.. Ang Bilis lang Ng Panahon dati nangangarap lang din ako katulad NG iba at ngayon andito na ako... Kahit 2 days lang ako noon nag practice NG assembly sa skills test sa Prime ay Mas madali ko syang nagawa Doon sa actual na kasi maganda yong mga practice materials NG Prime.. Payo ko lang sa mga nagsisimula palang ay dapat e master niyo Muna mga Korean letters at Kung paano sila basahin tsaka pagkatapos memorize NG madaming vocabulary... Mas madali mong MA memorize ang mga vocabs Kung bihasa kanang magbasa.... Tapos basahin mo Yong Libro na ibibigay Nila at yong audio pabalik balik</p>
-                            <h4 class="font-weight-bold mb-1 text-danger">MAR JUN AMISTOSO
+                            <h4 class="font-weight-bold mb-1 text-favorite">MAR JUN AMISTOSO
                             </h4>
                             <p class="font-weight-bold">STUDENT</p>
                         </div>
@@ -74,12 +74,12 @@
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
                             <svg viewBox="0 0 24 24" fill="currentColor" height="64" width="64"
-                                class="mb-3 text-danger">
+                                class="mb-3 text-favorite">
                                 <path
                                     d="M23 1V5.06504C21.9136 5.67931 21.0807 6.43812 20.5012 7.34146C19.958 8.24481 19.5416 9.20235 19.2519 10.2141C18.9621 11.2258 18.8173 12.346 18.8173 13.5745H23V22.4634H14.0914V16.935C14.0914 13.6107 14.3992 11.0813 15.0148 9.34688C15.6667 7.61246 16.6444 6.02258 17.9481 4.57723C19.2519 3.09575 20.9358 1.90334 23 1ZM9.90864 1V5.06504C8.82222 5.67931 7.9893 6.43812 7.40988 7.34146C6.83045 8.24481 6.39588 9.20235 6.10617 10.2141C5.81646 11.2258 5.67161 12.346 5.67161 13.5745H9.90864V22.4634H1V16.935C1 13.6107 1.30782 11.0813 1.92346 9.34688C2.57531 7.61246 3.55309 6.02258 4.85679 4.57723C6.16049 3.09575 7.84444 1.90334 9.90864 1Z" />
                             </svg>
                             <p class="font-weight-light h5 mb-4">Maraming salamat sa prime klc, Kayo ang naging tulay ko upang makapag work dito sa korea. Ngayon po ay 1 year and 6 months na po akong nag tatrabaho dito sa korea as factory worker. Kung di dahil sa inyo wala po ako dito sa korea, I am proud to be prime klc family. Kamsahamnida</p>
-                            <h4 class="font-weight-bold mb-1 text-danger">WALLY CATALAN
+                            <h4 class="font-weight-bold mb-1 text-favorite">WALLY CATALAN
                             </h4>
                             <p class="font-weight-bold">STUDENT</p>
                         </div>
@@ -87,10 +87,10 @@
                 </div>
             </div>
             <ol class="carousel-indicators position-relative">
-                <li data-target="#carousel7" data-slide-to="0" class="active bg-danger"></li>
-                <li data-target="#carousel7" data-slide-to="1" class="bg-danger"></li>
-                <li data-target="#carousel7" data-slide-to="2" class="bg-danger"></li>
-                <li data-target="#carousel7" data-slide-to="3" class="bg-danger"></li>
+                <li data-target="#carousel7" data-slide-to="0" class="active primary-color"></li>
+                <li data-target="#carousel7" data-slide-to="1" class="primary-color"></li>
+                <li data-target="#carousel7" data-slide-to="2" class="primary-color"></li>
+                <li data-target="#carousel7" data-slide-to="3" class="primary-color"></li>
             </ol>
         </div>
     </div>
