--- a/prime_home/templates/prime_home/branches_page.html
+++ b/prime_home/templates/prime_home/branches_page.html
@@ -46,10 +46,9 @@
             <div class="col-xl-9 mx-auto">
             <h2 class="text-favorite h1 mb-4 text-center">TACLOBAN</h2>
                 <img src="{{url_for('prime_home.static', filename='img/tacloban_1.jpg')}}" class="img-fluid mb-3 rounded-3" alt="Sample image" width="1280" height="720"/>
-                <p text-center>Room 308, 3rd Floor, Doña Luisa Bldg. Fuente Osmena circle, Cebu City</p>
+                <p text-center>Room 4B, 4th floor, CATJOY BUILDING, P.Burgos St. Tacloban City.</p>
                 <div data-aos="zoom-in" data-aos-duration="5000" class="container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.191198800076!2d-118.18046714839134!3d37.38531037973326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80be49e630bb0f4d%3A0x626d864ec13dbdba!2sAncient%20Bristlecone%20Pine%20Forest%20Visitor%20Center!5e0!3m2!1sen!2snp!4v1622962262896!5m2!1sen!2snp" height="450" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0" width="100%" class="d-block" title="Pinegeow location map"></iframe>
-                </div>     
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3913.2372222295458!2d124.99752901526205!3d11.243951953463242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33087109b372fe23%3A0x7143cd0a7dc75222!2sCatJoy%20Building!5e0!3m2!1sen!2sph!4v1635703963483!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>                </div>     
             </div>
         </div>                     
     </div>                 
@@ -62,10 +61,9 @@
             <div class="col-xl-9 mx-auto">
             <h2 class="text-favorite h1 mb-4 text-center">PALAWAN</h2>
                 <img src="{{url_for('prime_home.static', filename='img/palawan_1.jpg')}}" class="img-fluid mb-3 rounded-3" alt="Sample image" width="1280" height="720"/>
-                <p text-center>Room 308, 3rd Floor, Doña Luisa Bldg. Fuente Osmena circle, Cebu City</p>
+                <p text-center>3rd floor, Yusay incorporated building,Lacao st. puerto princesa city, palawan</p>
                 <div data-aos="zoom-in" data-aos-duration="5000" class="container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.191198800076!2d-118.18046714839134!3d37.38531037973326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80be49e630bb0f4d%3A0x626d864ec13dbdba!2sAncient%20Bristlecone%20Pine%20Forest%20Visitor%20Center!5e0!3m2!1sen!2snp!4v1622962262896!5m2!1sen!2snp" height="450" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0" width="100%" class="d-block" title="Pinegeow location map"></iframe>
-                </div>     
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d274508.7825970402!2d118.72926742827204!3d9.662742716624896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33b563ddd19c6223%3A0xd8eaa3581acb22f7!2sYusay%20Credit%20and%20Finance%20Corporation!5e0!3m2!1sen!2sph!4v1635704044241!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>                </div>     
             </div>
         </div>                     
     </div>                 
