--- a/prime_home/templates/prime_home/navigation_header.html
+++ b/prime_home/templates/prime_home/navigation_header.html
@@ -9,7 +9,7 @@ class="nav-background border border-left-0 border-right-0 border-top-0 navbar na
     <div class="collapse navbar-collapse " id="navbarNavDropdown-4">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link px-lg-3 py-lg-4" href="#">Home</a>
+                <a class="nav-link px-lg-3 py-lg-4" href="{{ url_for('prime_home.index') }}">Home</a>
             </li>
             <li class="nav-item dropdown">
                 <a @click="scrollGoToAbout" class="nav-link px-lg-3 py-lg-4" id="navbarDropdownMenuLink"
